# required dep for server:
IF(BUILD_JPIP_SERVER)
  FIND_PACKAGE(CURL REQUIRED)
  FIND_PACKAGE(FCGI REQUIRED)
  FIND_PACKAGE(Threads REQUIRED)
  IF(NOT CMAKE_USE_PTHREADS_INIT)
    MESSAGE(FATAL_ERROR "Only pthread are supported")
  ENDIF(NOT CMAKE_USE_PTHREADS_INIT)
ENDIF(BUILD_JPIP_SERVER)

# JPIP library:
ADD_SUBDIRECTORY(libopenjpip)

# JPIP binaries:
ADD_SUBDIRECTORY(util)

